Closed Bug 517278 Opened 15 years ago Closed 15 years ago

JS_REQUIRES_STACK errors in jsobj.cpp

Categories

(Core :: JavaScript Engine, defect)

x86
Windows NT
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: benjamin, Assigned: benjamin)

Details

Attachments

(1 file)

../../../src/js/src/jsobj.cpp: In function ‘JSBool js_SetPropertyHelper(JSContext*, JSObject*, jsid, uintN, jsval*)’:

../../../src/js/src/jsobj.cpp:4704: error: cannot call JS_REQUIRES_STACK function js_FillPropertyCache(JSContext*, JSObject*, uintN, uintN, JSObject*, JSScopeProperty*, JSBool)

../../../src/js/src/jsobj.cpp:4705: error: cannot call JS_REQUIRES_STACK function TraceRecorder::record_SetPropHit(TraceRecorder*, JSPropCacheEntry*, JSScopeProperty*)

../../../src/js/src/jsobj.cpp:4705: error: cannot call JS_REQUIRES_STACK function js_AbortRecordingImpl(JSContext*, const char*)

../../../src/js/src/jsobj.cpp:4602: error: cannot call JS_REQUIRES_STACK function js_FillPropertyCache(JSContext*, JSObject*, uintN, uintN, JSObject*, JSScopeProperty*, JSBool)

../../../src/js/src/jsobj.cpp:4603: error: cannot call JS_REQUIRES_STACK function TraceRecorder::record_SetPropHit(TraceRecorder*, JSPropCacheEntry*, JSScopeProperty*)

../../../src/js/src/jsobj.cpp:4603: error: cannot call JS_REQUIRES_STACK function js_AbortRecordingImpl(JSContext*, const char*)

../../../src/js/src/jsobj.cpp:4574: error: cannot call JS_REQUIRES_STACK function TraceRecorder::record_SetPropHit(TraceRecorder*, JSPropCacheEntry*, JSScopeProperty*)

../../../src/js/src/jsobj.cpp:4574: error: cannot call JS_REQUIRES_STACK function js_AbortRecordingImpl(JSContext*, const char*)

make[1]: *** [jsobj.o] Error 1
Assignee: general → benjamin
Status: NEW → ASSIGNED
Attachment #401257 - Flags: review?(jorendorff)
Comment on attachment 401257 [details] [diff] [review]
Annotate/assert things, rev. 1

Thanks.
Attachment #401257 - Flags: review?(jorendorff) → review+
http://hg.mozilla.org/mozilla-central/rev/87a9f82573cf
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: