Bug 517278 - JS_REQUIRES_STACK errors (jsobj.cpp and jstracer.cpp), r=jorendorff